# oop_paradigms

./: talent.cpp
interface/: CMakeLists.txt
interface/include/: circle.h  rectangle.h  shape.h  triangle.h
interface/src/: CMakeLists.txt  circle.cpp  main.cpp  rectangle.cpp  shape.cpp  triangle.cpp
